Added displayStateXYYYYDeck functions

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -13,29 +13,38 @@
 
     <!-- UTubs -->
     <div id="UTubDeck" class="deck row h-50 p-3">
-        <div class="col-6 col-lg-6">
-            <h2 id="UTubDeckHeader"></h2>
-        </div>
-        <div class="col-6 col-lg-6 d-flex flex-row-reverse">
-            <!-- Delete UTub button -->
-            <i id="deleteUTubBtn" class="mx-1" style="display:none">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill text-danger"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708" />
-                </svg></i>
+        <div class="row">
+            <!-- Header -->
+            <div class="col-6 col-lg-6">
+                <h2 id="UTubDeckHeader">UTubs</h2>
+            </div>
+            <!-- Icons -->
+            <div class="col-6 col-lg-6 d-flex flex-row-reverse">
+                <!-- Delete UTub button -->
+                <i id="deleteUTubBtn" class="mx-1" style="display:none">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill text-danger"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708" />
+                    </svg></i>
 
-            <!-- Create UTub button -->
-            <i id="createUTubBtn" class="green-clickable mx-1">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
-                </svg>
-            </i>
+                <!-- Create UTub button -->
+                <i id="createUTubBtn" class="green-clickable mx-1">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
+                    </svg>
+                </i>
+            </div>
         </div>
 
-        <div class="deckContent">
+        <div class="row">
+            <!-- Subheader -->
+            <h5 id="UTubDeckSubheader">Create a UTub</h2>
+        </div>
+
+        <div class="row deckContent">
             <form id="listUTubs">
                 <!-- UTubs -->
             </form>
@@ -46,7 +55,7 @@
     <!-- Tags -->
     <div id="TagDeck" class="deck row h-50 p-3">
         <div class="col-9 col-lg-9">
-            <h2 id="TagDeckHeader">No UTub Selected</h2>
+            <h2 id="TagDeckHeader">Tags</h2>
         </div>
         <div class="col-3 col-lg-3 text-right">
             <div class="d-flex justify-content-center flex-row">
@@ -72,8 +81,13 @@
                 </i> -->
             </div>
         </div>
-        <div class="deckContent form-group">
-            <h5 id="noTagsHeader">No tags applied to any URLs in this UTub</h5>
+
+        <div class="row">
+            <!-- Subheader -->
+            <h5 id="TagDeckSubheader"></h2>
+        </div>
+
+        <div class="row deckContent form-group">
             <form id="listTags">
                 <!-- Tags -->
             </form>
@@ -90,7 +104,7 @@
         <div class="row justify-content-center">
 
             <div class="col-9 col-lg-9" style="display:flex">
-                <!-- UTub name -->
+                <!-- Header -->
                 <h2 id="URLDeckHeader"></h2>
 
                 <!-- Edit UTub name -->
@@ -129,6 +143,11 @@
                     </svg>
                 </i>
             </div>
+        </div>
+
+        <div class="row">
+            <!-- Subheader -->
+            <h5 id="URLDeckSubheader"></h2>
         </div>
 
         <div class="row deckContent justify-content-center">
@@ -214,7 +233,7 @@
             </i>
         </div>
 
-        <div class="deckContent">
+        <div class="row deckContent">
             <h5><u><b>Owner</b></u></h5>
             <span id="UTubOwner"></span>
             <h5><u><b>Users</b></u></h5>
