Refactoring display states into discrete functions

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -105,7 +105,7 @@
 
             <div class="col-9 col-lg-9" style="display:flex">
                 <!-- Header -->
-                <h2 id="URLDeckHeader"></h2>
+                <h2 id="URLDeckHeader">URLs</h2>
 
                 <!-- Edit UTub name -->
                 <div class="createDiv" style="display: none">
