UTub display states functional! UTub Description display states in work

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -41,7 +41,7 @@
 
         <div class="row">
             <!-- Subheader -->
-            <h5 id="UTubDeckSubheader">Create a UTub</h2>
+            <h5 id="UTubDeckSubheader">Create a UTub</h5>
         </div>
 
         <div class="row deckContent">
@@ -205,6 +205,11 @@
                     </svg>
                 </i>
             </div>
+        </div>
+
+        <div class="row">
+            <!-- Subheader -->
+            <h5 id="UTubDescriptionDeckSubheader">Add a description</h5>
         </div>
 
         <div class="row">
