--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -84,7 +84,8 @@
 
         <div class="row">
             <!-- Subheader -->
-            <h5 id="TagDeckSubheader"></h2>
+            <h5 id="TagDeckSubheader">
+                </h2>
         </div>
 
         <div class="row deckContent form-group">
@@ -147,7 +148,8 @@
 
         <div class="row">
             <!-- Subheader -->
-            <h5 id="URLDeckSubheader"></h2>
+            <h5 id="URLDeckSubheader">
+                </h2>
         </div>
 
         <div class="row deckContent justify-content-center">
@@ -224,18 +226,26 @@
 
 
     <div id="UsersDeck" class="deck row h-50 p-3">
-        <div class="col-6 col-lg-6">
-            <h2 id="UserDeckHeader">Users</h2>
+
+        <div class="row">
+            <div class="col-6 col-lg-6">
+                <h2 id="UserDeckHeader">Users</h2>
+            </div>
+            <div class="col-6 col-lg-6 d-flex flex-row-reverse">
+                <!-- Add user button -->
+                <i id="addUserBtn" class="green-clickable mx-1">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
+                    </svg>
+                </i>
+            </div>
         </div>
-        <div class="col-6 col-lg-6 d-flex flex-row-reverse">
-            <!-- Add user button -->
-            <i id="addUserBtn" class="green-clickable mx-1">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
-                </svg>
-            </i>
+
+        <div class="row">
+            <!-- Subheader -->
+            <h5 id="UTubDescriptionDeckSubheader">Add a user</h5>
         </div>
 
         <div class="row deckContent">
