--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -45,9 +45,9 @@
         </div>
 
         <div class="row deckContent">
-            <form id="listUTubs">
+            <div id="listUTubs">
                 <!-- UTubs -->
-            </form>
+            </div>
         </div>
     </div>
 
@@ -88,10 +88,10 @@
                 </h2>
         </div>
 
-        <div class="row deckContent form-group">
-            <form id="listTags">
+        <div class="row deckContent">
+            <div id="listTags">
                 <!-- Tags -->
-            </form>
+            </div>
         </div>
     </div>
 </div>
@@ -250,11 +250,11 @@
 
         <div class="row deckContent">
             <h5><u><b>Owner</b></u></h5>
-            <span id="UTubOwner"></span>
+            <div id="UTubOwner"></div>
             <h5><u><b>Users</b></u></h5>
-            <form id="listUsers">
+            <div id="listUsers">
                 <!-- Users -->
-            </form>
+            </div>
         </div>
     </div>
 </div>
