Reworking tag filter function and parsing out deck creation

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -245,7 +245,7 @@
 
         <div class="row">
             <!-- Subheader -->
-            <h5 id="UTubDescriptionDeckSubheader">Add a user</h5>
+            <h5 id="UserDeckSubheader">Add a user</h5>
         </div>
 
         <div class="row deckContent">
