In the middle of tag filtering, but need a break

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -102,6 +102,7 @@
 
 <div id="centerPanel" class="panel col-md-6">
     <div id="URLDeck" class="deck row h-100 p-3">
+        <!-- Header -->
         <div class="row justify-content-center">
 
             <div class="col-9 col-lg-9" style="display:flex">
@@ -134,8 +135,8 @@
                 </i>
             </div>
 
+            <!-- Add URL button -->
             <div class="col-3 col-lg-3 d-flex flex-row-reverse">
-                <!-- Add URL button -->
                 <i id="addURLBtn" class="green-clickable mx-1" style="display: none;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-plus-square-fill" viewBox="0 0 16 16">
@@ -152,6 +153,7 @@
                 </h2>
         </div>
 
+        <!-- URLs -->
         <div class="row deckContent justify-content-center">
             <div id="listURLs">
                 <!-- Current selected UTub's URLs will be displayed here -->
