--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -191,7 +191,7 @@
 
             <div class="col-3 col-lg-3 d-flex flex-row-reverse">
                 <!-- Edit button -->
-                <i class="editUTubBtn mx-1 py-2" style="display: none; color: #545454">
+                <i id="editUTubBtn" class="mx-1 py-2" style="display: none; color: #545454">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-pencil-square" viewBox="0 0 16 16">
                         <path
@@ -201,7 +201,7 @@
                     </svg>
                 </i>
                 <!-- Submit edit button -->
-                <i class="submitEditUTubBtn green-clickable mx-1 py-2" style="display: none">
+                <i id="submitEditUTubBtn" class="green-clickable mx-1 py-2" style="display: none">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-check-square-fill" viewBox="0 0 16 16">
                         <path
