--- a/src/templates/email_validation/email_confirmation.html
+++ b/src/templates/email_validation/email_confirmation.html
@@ -161,7 +161,7 @@
                             style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                             <p style="margin: 0;">Tap the button below to confirm your email address. If you didn't
                                 create an account with <a
-                                    href="{{ url_for('main.splash', _external=True) }}">URLS4IRL</a>, you can
+                                    href="{{ url_for('splash.splash_page', _external=True) }}">URLS4IRL</a>, you can
                                 safely
                                 delete this email.</p>
                         </td>
