--- a/src/templates/password_reset/reset_password_html_email.html
+++ b/src/templates/password_reset/reset_password_html_email.html
@@ -160,7 +160,7 @@
                         <td align="left" bgcolor="#ffffff"
                             style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                             <p style="margin: 0;">To reset your password, please click the button below. If you didn't request a password reset for your <a
-                                    href="{{ url_for('main.splash', _external=True) }}">URLS4IRL</a> account, you can
+                                    href="{{ url_for('splash.splash_page', _external=True) }}">URLS4IRL</a> account, you can
                                 ignore this email.</p>
                         </td>
                     </tr>
