--- a/src/templates/email_validation/email_needs_validation_modal.html
+++ b/src/templates/email_validation/email_needs_validation_modal.html
@@ -8,7 +8,7 @@
         <div class="email-container">
             <div id="ValidateEmailIcon">✉️</div>
             <h1 class="modal-title validate-email-text validate-email-title">Validate Your Email!</h1>
-            <button type="button" class="btn-close modal-close close-modal" data-bs-dismiss="modal" aria-label="close">
+            <button type="button" class="btn-close close-modal" data-bs-dismiss="modal" aria-label="close">
             </button>
         </div>
     </div>
