--- a/src/templates/password_reset/reset_password.html
+++ b/src/templates/password_reset/reset_password.html
@@ -7,14 +7,13 @@
 <form id="ModalForm" method="POST" class="login-register-form" action="" novalidate>
     <div class="modal-header">
         <h4 class="modal-title">Reset your password!</h4>
-        <button type="button" class="close close-register-login-modal" data-dismiss="modal" aria-label="close">
-            <span aria-hidden="true">&times;</span>
+        <button type="button" class="btn-close close-modal" data-bs-dismiss="modal" aria-label="close">
         </button>
     </div>
     <div class="modal-body">
         {{ reset_password_form.hidden_tag() }}
         <fieldset class="form-group">
-            <div class="form-group">
+            <div class="form-group first-in-register-login-form">
                 {{ reset_password_form.new_password.label(class="form-control-label login-register-label")}}
                 {% if reset_password_form.new_password.errors %}
                 {{ reset_password_form.new_password(class="form-control login-register-form-group is-invalid") }}
@@ -44,7 +43,6 @@
         <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         {{ reset_password_form.submit(class="btn btn-success login-register-form-group col-12")}}
     </div>
 </form>
