--- a/src/templates/password_reset/reset_password.html
+++ b/src/templates/password_reset/reset_password.html
@@ -46,3 +46,5 @@
         {{ reset_password_form.submit(class="btn btn-success login-register-form-group col-12")}}
     </div>
 </form>
+
+<script src="{{ url_for('static', filename='scripts/tester.js') }}"></script>
