--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -114,7 +114,7 @@
                     <input type="text" id="editUTubName" class="userInput">
 
                     <!-- Submit edit UTub name -->
-                    <i class="submitEditUTubBtn green-clickable mx-1 py-2">
+                    <i id="submitEditUTubNameBtn" class="green-clickable mx-1 py-2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-check-square-fill" viewBox="0 0 16 16">
                             <path
@@ -124,7 +124,7 @@
                 </div>
 
                 <!-- Edit UTub button -->
-                <i class="editUTubBtn mx-1 py-2" style="display: none; color: #545454">
+                <i id="editUTubNameBtn" class="mx-1 py-2" style="display: none; color: #545454">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-pencil-square" viewBox="0 0 16 16">
                         <path
@@ -149,8 +149,7 @@
 
         <div class="row">
             <!-- Subheader -->
-            <h5 id="URLDeckSubheader">
-                </h2>
+            <h5 id="URLDeckSubheader"></h5>
         </div>
 
         <!-- URLs -->
@@ -171,7 +170,7 @@
 
         <!-- Access all URLs button -->
         <div class="row justify-content-center">
-            <button id="accessAllURLsBtn" class="btn btn-primary " style="display: none; width: 25%">Access All URLs in UTub</button>
+            <button id="accessAllURLsBtn" class="btn btn-primary" style="display: none; width: 25%">Access All URLs in UTub</button>
         </div>
     </div>
 </div>
@@ -190,7 +189,7 @@
 
             <div class="col-3 col-lg-3 d-flex flex-row-reverse">
                 <!-- Edit button -->
-                <i class="editUTubBtn mx-1 py-2" style="display: none; color: #545454">
+                <i id="editUTubDescriptionBtn" class="mx-1 py-2" style="display: none; color: #545454">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-pencil-square" viewBox="0 0 16 16">
                         <path
@@ -200,7 +199,7 @@
                     </svg>
                 </i>
                 <!-- Submit edit button -->
-                <i class="submitEditUTubBtn green-clickable mx-1 py-2" style="display: none">
+                <i id="submitEditUTubDescriptionBtn" class="green-clickable mx-1 py-2" style="display: none">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-check-square-fill" viewBox="0 0 16 16">
                         <path
