--- a/src/templates/password_reset/forgot_password.html
+++ b/src/templates/password_reset/forgot_password.html
@@ -34,3 +34,5 @@
         {{ forgot_password_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block col-12")}}
     </div>
 </form>
+
+<script src="{{ url_for('static', filename='scripts/splash/forgotPassword.js') }}"></script>
