--- a/src/templates/_routes.html
+++ b/src/templates/_routes.html
@@ -3,12 +3,12 @@
         constructor() {
             if (!Routes.instance) {
                 // UTub routes
-                this.addUtub = "{{url_for('utubs.create_utub')}}";
-                this.deleteUtub = (utub_id) => 
+                this.addUTub = "{{url_for('utubs.create_utub')}}";
+                this.deleteUTub = (utub_id) => 
                     "{{url_for('utubs.delete_utub', utub_id=-1)}}".replace("-1", utub_id);
-                this.editUtubName = (utub_id) => 
+                this.editUTubName = (utub_id) => 
                     "{{url_for('utubs.update_utub_name', utub_id=-1)}}".replace("-1", utub_id);
-                this.editutubDescription = (utub_id) => 
+                this.editUTubDescription = (utub_id) => 
                     "{{url_for('utubs.update_utub_desc', utub_id=-1)}}".replace("-1", utub_id);
 
                 // URL routes
