Modularized email validation modal, setup env vars for port and host

--- a/src/templates/email_validation/email_needs_validation_modal.html
+++ b/src/templates/email_validation/email_needs_validation_modal.html
@@ -3,6 +3,7 @@
         window.location.href = '/';
     };
 </script>
+
 <form id="ModalForm" method="POST" class="login-register-form validate-email-form" action="" novalidate>
     <div class="modal-header">
         <div class="email-container">
@@ -26,6 +27,5 @@
     </div>
 </form>
 
-<script>
-    setCloseModalButton(true);
-</script>
+<script src="{{ url_for('static', filename='scripts/splash/emailValidation.js') }}"></script>
+
