--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -81,7 +81,11 @@
 
     {% block modal_extender %}
     <!-- Modal -->
-    {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
+    {% if email_token_is_expired %}
+
+    {% include 'email_validation/email_needs_validation_modal_expired.html' %}
+
+    {% elif current_user.is_authenticated and current_user.email_confirm.is_validated %}
 
     {% include 'modals/homeModalBase.html' %}
 
@@ -90,7 +94,6 @@
     {% include 'modals/splashModalBase.html' %}
 
     {% endif %}
-    <!-- Modal -->
     {% endblock %}
 
     {% block mainbody %}
