--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -50,7 +50,7 @@
     </div>
     <div class="modal-footer register-login-modal-footer">
         {{ login_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block col-4 mr-4")}}
-        <a class="btn btn-success col-7 login-register-form-group to-register login-register-buttons center-block"
+        <a id="ToRegisterFromLogin" class="btn btn-info col-7 login-register-form-group center-block"
             href="javascript:;">Register</a>
     </div>
 </form>
