--- a/src/templates/register_user.html
+++ b/src/templates/register_user.html
@@ -88,7 +88,7 @@
 <div class="d-flex justify-content-center register-to-login-footer">
     <div class="border-top pb-3">
         <small class="text-muted">
-            <a class="to-login" href="javascript:;">Already a user? Login</a>
+            <a id="ToLoginFromRegister" href="javascript:;">Already a user? Login</a>
         </small>
     </div>
 </div>
