--- a/src/templates/splash.html
+++ b/src/templates/splash.html
@@ -9,10 +9,8 @@
             <div class="jumbotron jumbotron-fluid">
                 <h1 class="display-4">Welcome to URLS4IRL</h1>
                 <p class="lead login-register-label">A simple, clean way to permanently save and share URLs.</p>
-                <button type="button" class="btn btn-success to-register btn-block splash-button" data-bs-toggle="modal"
-                    data-bs-target="#SplashModal">Register</button>
-                <button type="button" class="btn btn-success to-login btn-block splash-button" data-bs-toggle="modal"
-                    data-bs-target="#SplashModal">Login</button>
+                <button type="button" class="btn btn-success to-register btn-block splash-button">Register</button>
+                <button type="button" class="btn btn-success to-login btn-block splash-button">Login</button>
             </div>
         </div>
     </div>
