Move tests and fix for changes on splash page, lowercase-uppercase emails

--- a/src/templates/email_validation/email_needs_validation_modal.html
+++ b/src/templates/email_validation/email_needs_validation_modal.html
@@ -16,7 +16,8 @@
     <div class="modal-body">
         {{ validate_email_form.hidden_tag() }}
         <p id="ValidateEmailText" class="validate-email-text">Your email address has not been validated. To complete
-            your registration, <strong>please click</strong> the button below to receive a validation email.</p>
+            your registration, <strong>check your inbox</strong> and click on the link we sent in the email. If you have not received
+            the email for some time, click the button below to resend a validation email.</p>
         <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
     </div>
     <div class="modal-footer" id="EmailValidationFooter">
