--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -1,12 +1,17 @@
 /** Colors and themes **/
 
 :root {
-    --splashGreen: #28a745;
-    --splashLabelGreen: #2ecc71;
+    --splashGreen: rgba(36, 167, 69, 1.0);
+    --darkSplashGreen: rgba(36, 167, 69, 0.75);
+    --splashLabelGreen: rgba(46, 204, 113, 1.0);
+    --darkSplashLabelGreen: rgba(30, 133, 73, 1.0);
     --pageBackgroundColor: #1f2424;
     --borderColor: #343c3d;
-    --deckHeaderGreen: #28a745;
+    --deckHeaderGreen: rgba(36, 167, 69, 1.0);
     --deckSelectionGreen: #60daaa;
+    --offWhiteSplashBackgroundBanner: rgba(248, 248, 248, 0.74);
+    --blueLinkOnHover: rgba(5, 34, 77, 1.0);
+    --darkGrayTextColor: rgba(51, 51, 51, 1.0);
 
     --cardBackgroundColor: #282f2f;
     --UTubDescriptionColor: white;
@@ -547,7 +552,7 @@ span.user:hover .user-remove {
 }
 
 .jumbotron {
-    background: rgba(248, 248, 248, 0.74);
+    background: var(--offWhiteSplashBackgroundBanner);
     padding: 6rem 2rem;
     display: flex;
     flex-direction: column;
@@ -587,7 +592,15 @@ span.user:hover .user-remove {
 .login-register-label {
     font-weight: 700;
     font-size: 120%;
+}
+
+.forgot-password-email-label {
     color: var(--splashLabelGreen);
+}
+
+.login-register-label {
+    color: var(--darkSplashLabelGreen);
+
 }
 
 .login-register-label {
@@ -612,7 +625,7 @@ span.user:hover .user-remove {
 
 .validate-email-title {
     flex-grow: 1;
-    color: #28a745;
+    color: var(--splashGreen);
     font-size: 36px;
 }
 
@@ -647,7 +660,7 @@ span.user:hover .user-remove {
 }
 
 .forgot-password-form-group {
-    margin-bottom: 0;
+    margin-bottom: 10px;
 }
 
 .alert-banner-splash-modal-hide {
@@ -665,6 +678,14 @@ span.user:hover .user-remove {
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.splash-page-links {
+    color: var(--bs-link-hover-color) !important;
+}
+
+.splash-page-links:hover {
+    color: var(--blueLinkOnHover) !important;
 }
 
 /* ID specific */
@@ -711,7 +732,7 @@ span.user:hover .user-remove {
 #ValidateEmailIcon {
     width: 48px;
     height: 48px;
-    background-color: #28a745;
+    background-color: var(--splashGreen);
     color: white;
     font-size: 28px;
     display: flex;
@@ -722,13 +743,13 @@ span.user:hover .user-remove {
 }
 
 #ValidateEmailText {
-    color: #333;
+    color: var(--darkGrayTextColor);
     font-size: 18px;
     line-height: 1.6;
 }
 
 #EmailAlertBanner {
-    color: #333;
+    color: var(--darkGrayTextColor);
     font-size: 18px;
     line-height: 1.6;
     text-align: center;
@@ -759,16 +780,6 @@ span.user:hover .user-remove {
 #NavbarNavDropdown {
     justify-content: flex-end;
     padding-inline-end: 5px;
-}
-
-#ToRegisterFromLogin {
-    background-color: #81979C;
-    border-color: #81979C;
-}
-
-#ToRegisterFromLogin:hover {
-    background-color: #63797E;
-    border-color: #63797E;
 }
 
 @media (max-width: 767px) {
