--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -28,7 +28,7 @@
                 {{ login_form.username(class="form-control login-register-form-group")}}
                 {% endif %}
             </div>
-            <div class="form-group forgot-password-form-group">
+            <div class="form-group">
                 {{ login_form.password.label(class="form-control-label login-register-label")}}
                 {% if login_form.password.errors %}
                 {{ login_form.password(class="form-control login-register-form-group is-invalid") }}
@@ -43,14 +43,14 @@
             </div>
             <div class="form-group" id="ForgotPasswordLink">
                 <small class="text-muted">
-                    <a class="to-forgot-password" href="javascript:;">Forgot your password?</a>
+                    <a class="splash-page-links to-forgot-password" href="javascript:;">Forgot your password?</a>
                 </small>
             </div>
         </fieldset>
     </div>
     <div class="modal-footer register-login-modal-footer">
         {{ login_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block col-4 mr-4")}}
-        <a id="ToRegisterFromLogin" class="btn btn-info col-7 login-register-form-group center-block"
+        <a id="ToRegisterFromLogin" class="btn btn-secondary col-7 login-register-form-group center-block"
             href="javascript:;">Register</a>
     </div>
 </form>
