--- a/src/templates/password_reset/reset_password.html
+++ b/src/templates/password_reset/reset_password.html
@@ -47,4 +47,4 @@
     </div>
 </form>
 
-<script src="{{ url_for('static', filename='scripts/tester.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/splash/resetPassword.js') }}"></script>
