editURLTitle functionality confirmed. Doesn't reset input field to pre-edited value, but works...

--- a/src/templates/_routes.html
+++ b/src/templates/_routes.html
@@ -22,7 +22,7 @@
                     "{{url_for('urls.edit_url', utub_id=-1, url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", url_id);
-                this.editUrlTitle = (utub_id, url_id) => 
+                this.editURLTitle = (utub_id, url_id) => 
                     "{{url_for('urls.edit_url_title', utub_id=-1, url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", url_id);
