Break out Tags and Users into *_routes.js files

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -267,10 +267,11 @@
 <script src="{{ url_for('static', filename='scripts/utubs.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/utubs_routes.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/tags.js') }}"></script>
-<!-- <script src="{{ url_for('static', filename='scripts/tags_routes.js') }}"></script> -->
+<script src="{{ url_for('static', filename='scripts/tags_routes.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/urls.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/urls_routes.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/users.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/users_routes.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/dragdropswap.js') }}"></script>
 
 {% endblock %}
