--- a/src/templates/_routes.html
+++ b/src/templates/_routes.html
@@ -4,49 +4,51 @@
             if (!Routes.instance) {
                 // UTub routes
                 this.addUTub = "{{url_for('utubs.create_utub')}}";
-                this.deleteUTub = (utub_id) => 
+                this.deleteUTub = (utub_id) =>
                     "{{url_for('utubs.delete_utub', utub_id=-1)}}".replace("-1", utub_id);
-                this.editUTubName = (utub_id) => 
+                this.editUTubName = (utub_id) =>
                     "{{url_for('utubs.update_utub_name', utub_id=-1)}}".replace("-1", utub_id);
-                this.editUTubDescription = (utub_id) => 
+                // 04/04/24 DP "update" --> "edit"
+                this.editUTubDescription = (utub_id) =>
                     "{{url_for('utubs.update_utub_desc', utub_id=-1)}}".replace("-1", utub_id);
 
                 // URL routes
-                this.addURL = (utub_id) => 
+                this.addURL = (utub_id) =>
                     "{{url_for('urls.add_url', utub_id=-1)}}".replace("-1", utub_id);
-                this.deleteURL = (utub_id, url_id) => 
+                this.deleteURL = (utub_id, url_id) =>
                     "{{url_for('urls.delete_url', utub_id=-1, url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", url_id);
-                this.editURL = (utub_id, url_id) => 
+                this.editURL = (utub_id, url_id) =>
                     "{{url_for('urls.edit_url', utub_id=-1, url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", url_id);
-                this.editURLTitle = (utub_id, url_id) => 
+                this.editURLTitle = (utub_id, url_id) =>
                     "{{url_for('urls.edit_url_title', utub_id=-1, url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", url_id);
 
                 // Tag routes
-                this.addTag = (utub_id, url_id) => 
+                this.addTag = (utub_id, url_id) =>
                     "{{url_for('tags.add_tag', utub_id=-1, url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", url_id);
-                this.removeTag = (utub_id, url_id, tag_id) => 
+                this.removeTag = (utub_id, url_id, tag_id) =>
                     "{{url_for('tags.remove_tag', utub_id=-1, url_id=-2, tag_id=-3)}}"
                         .replace("-1", utub_id)
                         .replace("-2", url_id)
                         .replace("-3", tag_id);
-                this.editTag = (utub_id, url_id, tag_id) => 
+                // 04/04/24 DP "modify" --> "edit"
+                this.editTag = (utub_id, url_id, tag_id) =>
                     "{{url_for('tags.modify_tag_on_url', utub_id=-1, url_id=-2, tag_id=-3)}}"
                         .replace("-1", utub_id)
                         .replace("-2", url_id)
                         .replace("-3", tag_id)
 
                 // User routes
-                this.addUser = (utub_id) => 
+                this.addUser = (utub_id) =>
                     "{{url_for('users.add_user', utub_id=-1)}}".replace("-1", utub_id);
-                this.deleteUser = (utub_id, user_id) => 
+                this.removeUser = (utub_id, user_id) =>
                     "{{url_for('users.delete_user', utub_id=-1, user_id=-4)}}"
                         .replace("-1", utub_id)
                         .replace("-4", user_id);
