--- a/src/templates/email_validation/email_needs_validation_modal_expired.html
+++ b/src/templates/email_validation/email_needs_validation_modal_expired.html
@@ -38,6 +38,5 @@
 </div>
 
 <script type="text/javascript">
-    splashModal = bootstrap.Modal.getOrCreateInstance('#SplashModal');
-    splashModal.show();
+    bootstrap.Modal.getOrCreateInstance('#SplashModal').show();
 </script>
